Bug 12939 - netlogon server is not multi-process on ncacn_ip_tcp:
Summary: netlogon server is not multi-process on ncacn_ip_tcp:
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.7.0rc3
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.7
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
: 12866 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-07-27 00:12 UTC by Andrew Bartlett
Modified: 2017-08-01 06:09 UTC (History)
3 users (show)

See Also:


Attachments
Backport for 4.7 (4.56 KB, patch)
2017-07-31 04:28 UTC, Garming Sam
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2017-07-27 00:12:56 UTC
The netlogon server is advertised as multi-process in Samba 4.6 was not actually multi-process for the ncacn_ip_tcp transport.
Comment 1 Garming Sam 2017-07-31 03:19:21 UTC
*** Bug 12866 has been marked as a duplicate of this bug. ***
Comment 2 Garming Sam 2017-07-31 04:28:16 UTC
Created attachment 13437 [details]
Backport for 4.7
Comment 3 Karolin Seeger 2017-07-31 09:23:50 UTC
Pushed to autobuild-v4-7-test.
Comment 4 Karolin Seeger 2017-08-01 06:09:35 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to v4-7-test.
Closing out bug report.

Thanks!